GNG-400: Add overflow-x: hidden to body to prevent side scrolling

--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -1,4 +1,8 @@
 
+body {
+  overflow-x: hidden;
+}
+
 @media (min-width: 600px) {
   body .gutenberg__editor {
     position: relative;
